DATE        AUTHOR      CHANGE
----------- ----------- -------------------------------------------------------
Aug-03-2006 dshipton    Flagpoll now used to build Jackal
                        NEW VERSION: 1.1.7
Jul-12-2006 patrick     Changed the DLL name to include the version as part of
                        the base library name on Windows. Implemented automatic
                        linking of the JCCL library.
                        NEW VERSION: 1.1.6
Jun-25-2006 patrick     Added support for building universal binaries on Mac
                        OS X.
                        NEW VERSION: 1.1.5
May-24-2006 dshipton    Versioning of all data and libraries for parallel
                        installations.
                        NEW VERSION: 1.1.4
Oct-10-2005 patrickh    jccl::ConfigManager is no longer responsible for
                        deleting the memory held its pointre to the remote
                        run-time reconfiguration interface implementation.
                        NEW VERSION: 1.1.3
Jul-11-2005 patrickh    Updated to VPR 1.1.3.
Jul-10-2005 patrickh    Updated to VPR 1.1.2.
Jun-28-2005 patrickh    Added jccl::DependencyManager::unregisterChecker().
                        NEW VERSION: 1.1.2
Jun-09-2005 patrickh    Updated to support Windows 64-bit edition.
                        NEW VERSION: 1.1.1
Jun-07-2005 patrickh    VR Juggler 2.0 branch created.
                        NEW VERSION: 1.1.0

[1.0 Beta 3 released - 6.7.2005]===============================================
Jun-07-2005 patrickh    NEW VERSION: 0.93.0
May-13-2005 allenb      Make the copy constructor on jccl::Configuration
                        use a const reference.
                        NEW VERSION: 0.92.13
Apr-10-2005 patrickh    Removed methods jccl::ConfigDefinition::assertValid(),
                        jccl::ConfigElement::assertValid(), and
                        jccl::PropertyDefinition::assertValid().