@@ -1,3 +1,4 @@
+1.1.8-0 @08/09/2006 14:30:00 UTC@
 1.1.7-0 @08/03/2006 20:20:00 UTC@
 1.1.6-0 @07/12/2006 14:35:00 UTC@
 1.1.5-0 @06/26/2006 02:45:00 UTC@
