@@ -1,6 +1,8 @@
 DATE        AUTHOR      CHANGE
 ----------- ----------- -------------------------------------------------------
-Aug-03-2006 dshipton    Flagpoll now used to build Jackal
+Aug-09-2006 patrick     Updated for Boost.Filesystem changes in Boost 1.34.
+                        NEW VERSION: 1.1.8
+Aug-03-2006 dshipton    Flagpoll now used to build JCCL.
                         NEW VERSION: 1.1.7
 Jul-12-2006 patrick     Changed the DLL name to include the version as part of
                         the base library name on Windows. Implemented automatic
